2006-12-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print: minor cleanups.

	* plug-ins/print/print-page-layout.c: cleanup up GUI code.

	* plug-ins/print/print-settings.c (check_version): check keyfile
	before accessing it. Cleaned up error handling.

2006-12-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.c
	* plug-ins/print/print.c: formatting, minor cleanups, untabified.

2006-12-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimplayertreeview.c
	(gimp_layer_tree_view_set_context): don't do stuff on NULL mask
	view renderers. Fixes bug #389307.

2006-12-24  Mukund Sivaraman  <muks@mukund.org>

	* app/core/Makefile.am
	* app/core/gimp-transform-resize.c
	* app/core/gimpchannel.c
	* app/core/gimpdrawable-transform.c
	* app/core/gimpdrawable-transform.h
	* app/core/gimpdrawable.c
	* app/core/gimpimage-item-list.c
	* app/core/gimpimage-item-list.h
	* app/core/gimpitem-linked.c
	* app/core/gimpitem-linked.h
	* app/core/gimpitem.c
	* app/core/gimpitem.h
	* app/core/gimplayer.c
	* app/pdb/drawable_transform_cmds.c
	* app/text/gimptextlayer-transform.c
	* app/text/gimptextlayer-transform.h
	* app/tools/gimptransformoptions.c
	* app/tools/gimptransformtool.c
	* app/vectors/gimpvectors.c
	* libgimp/gimpdrawabletransform_pdb.c
	* libgimp/gimpdrawabletransform_pdb.h
	* libgimp/gimpenums.c.tail
	* libgimpbase/gimpbase.def
	* libgimpbase/gimpbaseenums.c
	* libgimpbase/gimpbaseenums.h
	* tools/pdbgen/enums.pl
	* tools/pdbgen/pdb/drawable_transform.pdb: implemented UI and PDB
	for new clipping modes for affine transforms (crop to largest
	rectangle, and crop to largest rectangle with the source's aspect
	ratio); fixed various bugs in the largest rectangle computation
	code; set padding to 6 in the transformation tool options.

2006-12-22  Sven Neumann  <sven@gimp.org>

	* data/tips/gimp-tips.xml.in: another tips change (bug #141443).
