@@ -1,5 +1,9 @@
 2006-12-26  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/tileit.c: corrected label (bug #389779).
+
+2006-12-26  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/print/print: minor cleanups.
 
 	* plug-ins/print/print-page-layout.c: cleanup up GUI code.
